Cleaning up default ADDE servers. [1677]
Added atm.ucar.edu and removed the following:

idd.unl.edu
twister.millersville.edu
weather2.admin.niu.edu
weather3.admin.niu.edu

Removed BLIZZARD and GINCOMP from stratus.al.noaa.gov.

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -201,7 +201,7 @@ idv.data.tds.radar.servers.delete=http://motherlode.ucar.edu:8080/thredds/radarS
 ## if there is an existing preference list, don't add these in
 idv.data.adde.servers.merge = true
 idv.data.adde.servers.merge.proplabel = Merge ADDE Servers
-idv.data.adde.servers.delete = weather2.admin.niu.edu;atm.geo.nsf.gov;adde.geo.nsf.gov;cacimbo.ggy.uga.edu
+idv.data.adde.servers.delete = weather2.admin.niu.edu;atm.geo.nsf.gov;adde.geo.nsf.gov;cacimbo.ggy.uga.edu;idd.unl.edu;twister.millersville.edu;weather2.admin.niu.edu;weather3.admin.niu.edu
 idv.data.adde.servers.delete.proplabel=ADDE Servers To Remove
 idv.data.adde.servers.delete.propdelimiter=;
 
