Some URL adjustments. [2010]
This commit removes the following URLs:

http://www.unidata.ucar.edu/georesources/threddsRtModels.xml
http://www.ssec.wisc.edu/mcidas/software/v/threddsRtModels.xml

And adds http://www.ssec.wisc.edu/mcidas/software/v/threddsRTModels.xml

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -325,9 +325,9 @@ idv.data.catalog.list.delete= http://motherlode.ucar.edu/dods/catalog.xml;http:/
 
 
 ##Semicolon delimited list of urls pointing to grid catalogs
-idv.data.grid.list=http://www.ssec.wisc.edu/mcidas/software/v/threddsRtModels.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels.xml;http://weather.rsmas.miami.edu/thredds/catalog.xml
+idv.data.grid.list=http://www.ssec.wisc.edu/mcidas/software/v/threddsRTModels.xml;http://weather.rsmas.miami.edu/thredds/catalog.xml
 ## Semicolon delimited list of URLs that have been removed from the "idv.data.grid.list" property
-idv.data.grid.list.delete=http://thredds.cise-nsf.gov:8080/thredds/idv/models.xml;http://motherlode.ucar.edu:8080/thredds/idv/models.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels_1.xml;http://atm.ucar.edu/thredds/idd/forecastModels.xml;http://atm.ucar.edu/thredds/idd/forecastProdsAndAna.xml
+idv.data.grid.list.delete=http://thredds.cise-nsf.gov:8080/thredds/idv/models.xml;http://motherlode.ucar.edu:8080/thredds/idv/models.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels_1.xml;http://atm.ucar.edu/thredds/idd/forecastModels.xml;http://atm.ucar.edu/thredds/idd/forecastProdsAndAna.xml;http://www.unidata.ucar.edu/georesources/threddsRtModels.xml;http://www.ssec.wisc.edu/mcidas/software/v/threddsRtModels.xml
 
 
 ##This defines extra netcdf convention handling classes
