Fix for weather text products using wrong server.
AddeTextProductDataSource unfortunately does not pay attention to
addeservers.xml; instead you can specify a server other than
adde.ucar.edu by setting the "textserver" property.

[2013]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -465,3 +465,7 @@ idv.jython.editor.propdesc= Use %filename% macro, e.g., '/usr/bin/emacs %filenam
 idv.usetimedriver.proplabel=Use Time Drivers
 idv.usetimedriver.propdesc=If true then displays can be used to select the times for other displays
 idv.usetimedriver=true
+
+# For Request 1 of Inquiry 2013. AddeTextProductDataSource reads from the
+# "textserver" property in its "readProducts" method.
+textserver=adde.ssec.wisc.edu
