New catalog.xml URL. [2011]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -316,12 +316,12 @@ idv.ui.lookandfeel = javax.swing.plaf.metal.MetalLookAndFeel
 ##Semicolon delimited list of urls pointing to thredds catalogs
 idv.data.catalog.list.proplabel=Catalogs
 idv.data.catalog.list.propdelimiter=;
-idv.data.catalog.list=http://www.unidata.ucar.edu/georesources/idvcatalog.xml
+idv.data.catalog.list=http://www.ssec.wisc.edu/mcidas/software/v/catalog.xml
 idv.data.catalog.list.merge=true
 idv.data.catalog.list.merge.proplabel=Merge Catalogs
 idv.data.catalog.list.delete.proplabel=Catalogs To Remove
 idv.data.catalog.list.delete.propdelimiter=;
-idv.data.catalog.list.delete= http://motherlode.ucar.edu/dods/catalog.xml;http://motherlode.ucar.edu:8080/thredds/idv/rt-models.xml;http://motherlode.ucar.edu:8080/thredds/idv/rt-models.1.0.xml;http://motherlode.ucar.edu:8088/thredds/cataloggen/catalogs/uniModelsInvCat1.0en.xml;http://thredds.ucar.edu/thredds/idd/models.xml
+idv.data.catalog.list.delete= http://motherlode.ucar.edu/dods/catalog.xml;http://motherlode.ucar.edu:8080/thredds/idv/rt-models.xml;http://motherlode.ucar.edu:8080/thredds/idv/rt-models.1.0.xml;http://motherlode.ucar.edu:8088/thredds/cataloggen/catalogs/uniModelsInvCat1.0en.xml;http://thredds.ucar.edu/thredds/idd/models.xml;http://www.unidata.ucar.edu/georesources/idvcatalog.xml
 
 
 ##Semicolon delimited list of urls pointing to grid catalogs
