--- a/build.xml
+++ b/build.xml
@@ -164,33 +164,38 @@
 
     <!-- Use these properties to make changing the versions of related JARs
         (see SLF4J or Logback) a bit less tedious. -->
-    <property name="slf4j.version" value="1.7.7" />
-    <property name="logback.version" value="1.1.2" />
-    <property name="miglayout.version" value="4.2" />
-    <property name="jogamp.version" value="2.2.1" />
+    <property name="slf4j.version" value="1.7.12" />
+    <property name="logback.version" value="1.1.3" />
+    <property name="miglayout.version" value="5.0" />
+    <property name="jogamp.version" value="2.3.1" />
+    <property name="swingx.version" value="1.6.5-1" />
+    <property name="eventbus.version" value="1.4" />
+    <property name="commons-math.version" value="3.5" />
+    <property name="rsyntaxtextarea.version" value="2.5.6" />
+    <property name="sysout.version" value="1.0.2" />
     <!-- note that the J3D JARs available from http://jogamp.org/deployment/java3d/
          do not (as of 20140915) have the version string in the filenames.
          this must be done manually for now. -->
-    <property name="java3d.version" value="1.6.0-pre11" />
+    <property name="java3d.version" value="1.6.0-pre12" />
 
     <!-- The CLASSPATH specified within McV's manifest -->
-    <property name="jar.base.classpath" value="gluegen-rt-${jogamp.version}.jar gluegen-${jogamp.version}.jar joal-${jogamp.version}.jar jocl-${jogamp.version}.jar jogl-all-${jogamp.version}.jar sysout-over-slf4j-1.0.2.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-1.4.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar local-idv.jar repositorytds.jar commons-math3-3.3.jar rsyntaxtextarea-2.5.3.jar jul-to-slf4j-${slf4j.version}.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar JSatTrak.jar swingx-common-1.6.5-1.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar" />
+    <property name="jar.base.classpath" value="gluegen-rt-${jogamp.version}.jar gluegen-${jogamp.version}.jar joal-${jogamp.version}.jar jocl-${jogamp.version}.jar jogl-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar local-idv.jar repositorytds.jar commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar JSatTrak.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar" />
     
     <!-- List of McIDAS-V jars -->
     <fileset id="mcv.libs" dir="${dist.dir}">
-        <include name="swingx-common-1.6.5-1.jar" />
-        <include name="sysout-over-slf4j-1.0.2.jar" />
+        <include name="swingx-common-${swingx.version}.jar" />
+        <include name="sysout-over-slf4j-${sysout.version}.jar" />
         <include name="miglayout-core-${miglayout.version}.jar" />
         <include name="miglayout-swing-${miglayout.version}.jar" />
-        <include name="eventbus-1.4.jar" />
+        <include name="eventbus-${eventbus.version}.jar" />
         <include name="logback-core-${logback.version}.jar" />
         <include name="logback-classic-${logback.version}.jar" />
         <include name="log4j-over-slf4j-${slf4j.version}.jar" />
         <include name="slf4j-api-${slf4j.version}.jar" />
         <include name="local-idv.jar" />
         <include name="repositorytds.jar" />
-        <include name="commons-math3-3.3.jar" />
-        <include name="rsyntaxtextarea-2.5.3.jar" />
+        <include name="commons-math3-${commons-math.version}.jar" />
+        <include name="rsyntaxtextarea-${rsyntaxtextarea.version}.jar" />
         <include name="jul-to-slf4j-${slf4j.version}.jar" />
         <include name="JSatTrak.jar"/>
         <include name="j3dcore-${java3d.version}.jar" />
@@ -217,7 +222,7 @@
     </fileset>
 
     <fileset id="linux_x64.libs" dir="${dist.dir}">
-        <include name="gluegen-${jogamp.version}-natives-linux-amd64.jar" />
+        <!-- <include name="gluegen-${jogamp.version}-natives-linux-amd64.jar" /> -->
         <include name="gluegen-rt-${jogamp.version}-natives-linux-amd64.jar" />
         <include name="joal-${jogamp.version}-natives-linux-amd64.jar" />
         <include name="jocl-${jogamp.version}-natives-linux-amd64.jar" />
@@ -225,7 +230,7 @@
     </fileset>
 
     <fileset id="linux_x86.libs" dir="${dist.dir}">
-        <include name="gluegen-${jogamp.version}-natives-linux-i586.jar" />
+        <!-- <include name="gluegen-${jogamp.version}-natives-linux-i586.jar" /> -->
         <include name="gluegen-rt-${jogamp.version}-natives-linux-i586.jar" />
         <include name="joal-${jogamp.version}-natives-linux-i586.jar" />
         <include name="jocl-${jogamp.version}-natives-linux-i586.jar" />
@@ -233,7 +238,7 @@
     </fileset>
 
     <fileset id="windows_x64.libs" dir="${dist.dir}">
-        <include name="gluegen-${jogamp.version}-natives-windows-amd64.jar" />
+        <!-- <include name="gluegen-${jogamp.version}-natives-windows-amd64.jar" /> -->
         <include name="gluegen-rt-${jogamp.version}-natives-windows-amd64.jar" />
         <include name="joal-${jogamp.version}-natives-windows-amd64.jar" />
         <include name="jocl-${jogamp.version}-natives-windows-amd64.jar" />
@@ -241,7 +246,7 @@
     </fileset>
 
     <fileset id="windows_x86.libs" dir="${dist.dir}">
-        <include name="gluegen-${jogamp.version}-natives-windows-i586.jar" />
+        <!-- <include name="gluegen-${jogamp.version}-natives-windows-i586.jar" /> -->
         <include name="gluegen-rt-${jogamp.version}-natives-windows-i586.jar" />
         <include name="joal-${jogamp.version}-natives-windows-i586.jar" />
         <include name="jocl-${jogamp.version}-natives-windows-i586.jar" />
@@ -249,7 +254,7 @@
     </fileset>
 
     <fileset id="macosx.libs" dir="${dist.dir}">
-        <include name="gluegen-${jogamp.version}-natives-macosx-universal.jar" />
+        <!-- <include name="gluegen-${jogamp.version}-natives-macosx-universal.jar" /> -->
         <include name="gluegen-rt-${jogamp.version}-natives-macosx-universal.jar" />
         <include name="joal-${jogamp.version}-natives-macosx-universal.jar" />
         <include name="jocl-${jogamp.version}-natives-macosx-universal.jar" />
