Fix problem loading gluegen. [2041]
You may want to run "ant clean" just to be safe.

--- a/build.xml
+++ b/build.xml
@@ -222,7 +222,7 @@
     </fileset>
 
     <fileset id="linux_x64.libs" dir="${dist.dir}">
-        <!-- <include name="gluegen-${jogamp.version}-natives-linux-amd64.jar" /> -->
+        <include name="gluegen-${jogamp.version}-natives-linux-amd64.jar" />
         <include name="gluegen-rt-${jogamp.version}-natives-linux-amd64.jar" />
         <include name="joal-${jogamp.version}-natives-linux-amd64.jar" />
         <include name="jocl-${jogamp.version}-natives-linux-amd64.jar" />
@@ -230,7 +230,7 @@
     </fileset>
 
     <fileset id="linux_x86.libs" dir="${dist.dir}">
-        <!-- <include name="gluegen-${jogamp.version}-natives-linux-i586.jar" /> -->
+        <include name="gluegen-${jogamp.version}-natives-linux-i586.jar" />
         <include name="gluegen-rt-${jogamp.version}-natives-linux-i586.jar" />
         <include name="joal-${jogamp.version}-natives-linux-i586.jar" />
         <include name="jocl-${jogamp.version}-natives-linux-i586.jar" />
@@ -238,7 +238,7 @@
     </fileset>
 
     <fileset id="windows_x64.libs" dir="${dist.dir}">
-        <!-- <include name="gluegen-${jogamp.version}-natives-windows-amd64.jar" /> -->
+        <include name="gluegen-${jogamp.version}-natives-windows-amd64.jar" />
         <include name="gluegen-rt-${jogamp.version}-natives-windows-amd64.jar" />
         <include name="joal-${jogamp.version}-natives-windows-amd64.jar" />
         <include name="jocl-${jogamp.version}-natives-windows-amd64.jar" />
@@ -246,7 +246,7 @@
     </fileset>
 
     <fileset id="windows_x86.libs" dir="${dist.dir}">
-        <!-- <include name="gluegen-${jogamp.version}-natives-windows-i586.jar" /> -->
+        <include name="gluegen-${jogamp.version}-natives-windows-i586.jar" />
         <include name="gluegen-rt-${jogamp.version}-natives-windows-i586.jar" />
         <include name="joal-${jogamp.version}-natives-windows-i586.jar" />
         <include name="jocl-${jogamp.version}-natives-windows-i586.jar" />
@@ -254,7 +254,7 @@
     </fileset>
 
     <fileset id="macosx.libs" dir="${dist.dir}">
-        <!-- <include name="gluegen-${jogamp.version}-natives-macosx-universal.jar" /> -->
+        <include name="gluegen-${jogamp.version}-natives-macosx-universal.jar" />
         <include name="gluegen-rt-${jogamp.version}-natives-macosx-universal.jar" />
         <include name="joal-${jogamp.version}-natives-macosx-universal.jar" />
         <include name="jocl-${jogamp.version}-natives-macosx-universal.jar" />
