Upgrade Jython to 2.7.0. [2041]
This also implements a few things from
https://github.com/mcidasv/mcidasv/pull/68

* No longer relying on the IDV's version of Jython.
* No longer writing Jython library to the userpath.

I know the new Jython JAR file is really large, but there are a few
benefits:

* We're shipping a "complete" version of Jython. If users want, they can
run "java -jar jython-standalone-2.7.0.jar" and start writing Python
2.7.
* Since everything is contained within the JAR file, upgrading is really
straightforward.

You'll likely want to run "ant clean" to remove the old jython.jar.

--- a/build.xml
+++ b/build.xml
@@ -207,6 +207,7 @@
         <include name="jocl-${jogamp.version}.jar" />
         <include name="jogl-all-noawt.jar" />
         <include name="jogl-all-${jogamp.version}.jar" />
+        <include name="jython-standalone-2.7.0.jar" />
     </fileset>
     
     <!-- List of IDV jars -->
@@ -214,7 +215,6 @@
         <include name="auxdata.jar" />
         <include name="local-visad.jar" />
         <include name="visad.jar" />
-        <include name="jython.jar" />
         <include name="external.jar" />
         <include name="ncIdv.jar" />
         <include name="idv.jar" />
